feat: add jwt and sign in
